--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -25,7 +25,7 @@
             </div>
                 {{renderSmallTags}}
             <div>
-                <a class="projectOwner" href="/profile/{{owner}}">{{username owner}}</a></h5> 
+                <a class="projectOwner" href="/profile/{{owner}}">{{username owner}}</a> 
                  <span class="date">on {{formatDate postedDate}}</span>
             </div>
             </li>
