--- a/app/client/templates/profiles/profile.html
+++ b/app/client/templates/profiles/profile.html
@@ -7,26 +7,26 @@
           <h2>Edit Profile</h2>
           <div class="form-group">
             <label>Email</label>
-            <input class="form-control" type="email" id="email" placeholder="Email" value="{{email}}"></input>
+            <input class="form-control" type="email" id="email" placeholder="Email" value="{{email}}">
             <span class='errors'></span>
           </div>
           <div class="form-group">
             <label>First name</label>
-            <input class="form-control" type="text" id="firstName" placeholder="First Name" value="{{firstName}}"></input>
+            <input class="form-control" type="text" id="firstName" placeholder="First Name" value="{{firstName}}">
             <span class='errors'></span>
           </div>
           <div class="form-group">
             <label>Last name</label>
-            <input class="form-control" type="text" id="lastName" placeholder="Last Name" value="{{lastName}}"></input>
+            <input class="form-control" type="text" id="lastName" placeholder="Last Name" value="{{lastName}}">
             <span class='errors'></span>
           </div>
           <div class="form-group">
             <label>Organisation</label>
-            <input class="form-control" type="text" id="organisation" placeholder="Organisation (optional)" value="{{organisation}}"></input>
+            <input class="form-control" type="text" id="organisation" placeholder="Organisation (optional)" value="{{organisation}}">
           </div>
           <div class="form-group">
             <label>Location</label>
-            <input class="form-control" type="text" id="location" placeholder="Location (optional)" value="{{location}}"></input>
+            <input class="form-control" type="text" id="location" placeholder="Location (optional)" value="{{location}}">
           </div>
           <div class="form-group">
             <label>Bio</label>
@@ -34,15 +34,15 @@
           </div>
           <div class="form-group">
             <label>URL</label>
-            <input class="form-control" type="text" id="url" placeholder="URL (optional)" value="{{url}}"></input>
+            <input class="form-control" type="text" id="url" placeholder="URL (optional)" value="{{url}}">
           </div>
           <div class="form-group">
             <label>Google+ URL</label>
-            <input class="form-control" type="text" id="googlePlusUrl" placeholder="Google Plus URL (optional)" value="{{googlePlusUrl}}"></input>
+            <input class="form-control" type="text" id="googlePlusUrl" placeholder="Google Plus URL (optional)" value="{{googlePlusUrl}}">
           </div>
           <div class="form-group">
             <label>Twitter handle</label>
-            <input class="form-control" type="text" id="twitterHandle" placeholder="Twitter Handle (optional)" value="{{twitterHandle}}"></input>
+            <input class="form-control" type="text" id="twitterHandle" placeholder="Twitter Handle (optional)" value="{{twitterHandle}}">
           </div>
           <div class="checkbox">
             <label>
