--- a/app/client/templates/projects/comments.html
+++ b/app/client/templates/projects/comments.html
@@ -38,7 +38,7 @@
                     <textarea id="comment_body" placeholder=""></textarea>
                 </div>
                 <button class="btn btn-primary" id="addNewComment">Post comment</button>
-            </fieldset>
+            </div>
         </form>
         {{else}}
         <div class="alert alert-dismissable alert-info">
