--- a/app/client/templates/home/about.html
+++ b/app/client/templates/home/about.html
@@ -10,7 +10,7 @@
             community with the problem identification and deep
             domain-specific knowledge in the scientific
             community. People who need help with their projects can
-            post them, while solvers can consult or volunteer on the projects.<p>
+            post them, while solvers can consult or volunteer on the projects.</p>
 
             <p>We want to enable skilled people to easily find ways to use their skills for good, so that together we can improve our world.</p>
 
@@ -28,7 +28,7 @@
             <img class="img-circle pull-left" src="richard.jpg">
             <p>Richard is a PhD student in computational plant biology at the University of Cambridge and a freelance developer.</p>
             <p>As a scientist, he has seen first hand how science could be improved with the involvement of a programmer. As a programmer, he has been awed by how generous software developers in the open source community are with their skills. Richard hopes Solvers can bridge the two communities to bring about positive change.</p>
-            <p><strong>Email: richard@solvers.io</strong></a>
+            <p><strong>Email: richard@solvers.io</strong></p>
         </div>
         <div class="col-md-5">
             <img class="img-circle pull-left" src="dave.jpg">
