Blaze fixes.. naming issues

--- a/app/client/templates/projects/comments.html
+++ b/app/client/templates/projects/comments.html
@@ -1,4 +1,4 @@
-<template name="comments">
+<template name="commentsList">
         <h4>Comments and questions</h4>
         {{#each comments}}
             <div class="comment">
