--- a/app/client/templates/projects/progress.html
+++ b/app/client/templates/projects/progress.html
@@ -5,10 +5,10 @@
 				{{projectStatus}}
 			</div>
 		</div>
-		{{> progress_bar}}
+		{{> progressBar}}
 	</div>
 </template>
-<template name="progress_editable">
+<template name="progressEditable">
 	<div class="row">
 		<div class="col-md-12 project-status">
 			<div class="progress-title">Project status:
@@ -24,10 +24,10 @@
 				</div>	
 			</div>
 		</div>
-		{{> progress_bar}}
+		{{> progressBar}}
 	</div>
 </template>
-<template name="progress_bar">
+<template name="progressBar">
 	<div class="col-md-12">
 		<div class="progress progress-striped">
 			<div class="progress-bar progress-bar-success" style="width: {{statusCompletion}}%;">
