--- a/app/client/templates/projects/tasks.html
+++ b/app/client/templates/projects/tasks.html
@@ -26,7 +26,7 @@
 	</div>
 </template>
 
-<template name="task_controls">
+<template name="taskControls">
 	<div id="add_task_modal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
