--- a/app/client/templates/projects/offer-help-modal.html
+++ b/app/client/templates/projects/offer-help-modal.html
@@ -1,4 +1,4 @@
-<template name="offer_help_modal">
+<template name="offerHelpModal">
 	<!-- Modal -->
 	<div class="modal fade" id="offer-help-modal" tabindex="-1" role="dialog" aria-labelledby="offer-help-modal" aria-hidden="true">
 	  <div class="modal-dialog">
