--- a/app/client/templates/projects/showProject.html
+++ b/app/client/templates/projects/showProject.html
@@ -34,7 +34,7 @@
         <div class="tab-content">
             <div class="tab-pane active" id="project_tab">
                 {{#if mayUpdateProject}}
-                    {{> progress_editable}}
+                    {{> progressEditable}}
                 {{else}}
                     {{> progress}}
                 {{/if}}
@@ -49,7 +49,7 @@
             <div class="tab-pane" id="tasks_tab">
             {{> tasks}}
             {{#if mayUpdateProject}}
-                {{> task_controls}}
+                {{> taskControls}}
             {{/if}}
             </div>
             {{#if mayUpdateProject}}
@@ -72,8 +72,8 @@
                 {{/if}}
             </div>
         </div>
-        {{>comments}}
+        {{> commentsList}}
     {{/if}}
     </div>
-    {{> offer_help_modal}}
+    {{> offerHelpModal}}
 </template>
