--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -23,7 +23,7 @@
                 </button>
                 {{/if}}
             </div>
-                {{renderSmallTags}}
+                {{> listOfSmallTags}}
             <div>
                 <a class="projectOwner" href="/profile/{{owner}}">{{username owner}}</a> 
                  <span class="date">on {{formatDate postedDate}}</span>
