--- a/app/client/templates/tags/tags.html
+++ b/app/client/templates/tags/tags.html
@@ -1,7 +1,7 @@
 <template name="listOfSmallTags">
 <div class="project-list-tags">
-  {{#each listOfSmallTags.tags}}
-      <a href="/projects/tag/{{tagName}}"><span class="label label-info">{{tagName}}</span></a>
+  {{#each tags}}
+      <a href="/projects/tag/{{this}}"><span class="label label-info">{{this}}</span></a>
   {{/each}}
 </div>
 </template>
