--- a/app/client/templates/home/callToAction.html
+++ b/app/client/templates/home/callToAction.html
@@ -1,26 +1,21 @@
 <template name="callToAction">
 	{{#unless currentuser}}
-	<div class="row">
-		<center><h2>Want to use your skills to make a difference?<br />You're in the right place.</h2></center>
-	</div>
-	<div class="row">
-		<div class="col-md-offset-3 col-md-6">
-			<p><center><h4><strong>Solvers.io</strong> is a community of <strong>{{usercount}}</strong> people who want to <a href="http://www.wired.com/business/2013/11/bill-gates-wired-essay/">improve our world</a>. We connect projects that tackle important problems with the people who have the skills to help.</h4></center></p></br>
+	<div class="call-to-action">
+		<div class="header">
+			Connecting people with skills to people in need.
 		</div>
-	</div>
-	{{/unless}}
-	<div class="row callToAction">
-		<div class="col-md-offset-3 col-md-3">
-			<button class="btn btn-warning" id="gotoProjects">
-			<center><h3>Got skills?</h3></center>
-			<p>Get involved in a project below.</p>
-			</button>
+		<div class="tagline">
+			Join our community of <span class="diff-makers">{{usercount}} difference makers</span> <a href="http://www.wired.com/business/2013/11/bill-gates-wired-essay/">improving the world</a>.
 		</div>
-		<div class="col-md-3">
-			<button class="btn btn-warning" id="postProject">
-				<center><h3>Got an idea?</h3></center>
-				<p>Post it and recruit solvers.</p>
-			</button>
+		{{/unless}}
+		<div class="cta-btn" id="gotoProjects">
+			<div class="btn-header">I have a skill</div>
+			<div class="btn-desc">Filter open projects by listing your skillset</div>
+		</div>
+		<div class="cta-or">OR</div>
+		<div class="cta-btn" id="postProject">
+			<div class="btn-header">I have a project</div>
+			<div class="btn-desc">List your project below to be seen by potential contributors</div>
 		</div>
 	</div>
 </template>
