--- a/app/client/templates/header/header.html
+++ b/app/client/templates/header/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-		<div class="navbar nav-theme navbar-static-top" role="navigation">
+		<div class="navbar navbar-solvers nav-theme navbar-static-top" role="navigation">
 				<div class="container nav-container">
 						<div class="navbar-header">
 								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
