--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -12,6 +12,7 @@
         {{#if message}}
         <div class="alert alert-info filter-message">{{message}}</div>
         {{/if}}
+        <div class="project-count">{{projectsCount}} open projects</div>
         <ul class="projects">
         {{#each projects}}
             <li class="clearfix">
